re PR c++/35578 (Error about misplaced 'friend' word is issued on a wrong line)

PR c++/35578
	* parser.c (cp_parser_decl_specifier_seq): Add location to error
	message.

	* g++.dg/parse/friend8.C: New test.

From-SVN: r135181